--- a/views/404.html
+++ b/views/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Product</title>
+    <title>Document</title>
     <style>
         body {
             padding: 0;
@@ -44,43 +44,6 @@
             
         }
 
-        .product-form {
-            width: 20rem;
-            max-width: 90%;
-            margin: auto;
-        }
-
-        .form-control {
-            margin: 1rem 0;
-        }
-
-        .form-control label,
-        .form-control input {
-            display: block;
-            width: 100%;
-        }
-
-        .form-control input {
-            border: 1px solid gray;
-            font: inherit;
-            border-radius: 2px;
-        }
-
-        button{
-            font: inherit;
-            border: 1px solid black;
-            background: white;
-            color:rgb(227, 137, 21);
-            border-radius: 3px;
-            cursor: pointer;
-        }
-
-        button:hover,
-        button:active {
-            background-color: rgb(165, 158, 166);
-            color: white;
-        }
-
     </style>
 </head>
 <body>
@@ -92,15 +55,6 @@
             </ul>
         </nav>
     </header>
-
-    <main>
-        <form class="product-form" action="/admin/add-product" method="POST">
-            <div class="form-control">
-                <label>Title</label>
-                <input type="text" name="title">
-            </div>
-            <button type="submit">Add Product</button>
-        </form>
-    </main>
+    <h1>Page Not Found!</h1>
 </body>
 </html>
