--- a/views/404.html
+++ b/views/404.html
@@ -11,6 +11,9 @@
             margin: 0;
             font-family: sans-serif;
         }
+        main {
+            padding-left: 10px;
+        }
         .main-header {
             width: 100%;
             height: 3.5rem;
@@ -55,6 +58,8 @@
             </ul>
         </nav>
     </header>
-    <h1>Page Not Found!</h1>
+    <main>
+        <h1>Page Not Found!</h1>
+    </main>
 </body>
 </html>
