--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,9 @@ body {
     margin: 0;
     font-family: sans-serif;
 }
+main {
+    padding-left: 10px;
+}
 .main-header {
     width: 100%;
     height: 3.5rem;
