--- a/views/add-product.html
+++ b/views/add-product.html
@@ -5,83 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product</title>
-    <style>
-        body {
-            padding: 0;
-            margin: 0;
-            font-family: sans-serif;
-        }
-        .main-header {
-            width: 100%;
-            height: 3.5rem;
-            background-color: rgb(255, 199, 127);
-            padding: 0 1.5rem;
-        }
-        .main-header__nav {
-            height: 100%;
-            display: flex;
-            align-items: center;
-        }
-        .main-header__item-list {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-        .main-header__item {
-            margin: 0 1rem;
-            padding: 0;
-        }
-        .main-header__item a {
-            text-decoration: none;
-            color: brown;
-        }
-
-        .main-header__item a:hover,
-        .main-header__item a:active,
-        .main-header__item a.active {
-            color: rgb(252, 255, 225);
-            
-        }
-
-        .product-form {
-            width: 20rem;
-            max-width: 90%;
-            margin: auto;
-        }
-
-        .form-control {
-            margin: 1rem 0;
-        }
-
-        .form-control label,
-        .form-control input {
-            display: block;
-            width: 100%;
-        }
-
-        .form-control input {
-            border: 1px solid gray;
-            font: inherit;
-            border-radius: 2px;
-        }
-
-        button{
-            font: inherit;
-            border: 1px solid black;
-            background: white;
-            color:rgb(227, 137, 21);
-            border-radius: 3px;
-            cursor: pointer;
-        }
-
-        button:hover,
-        button:active {
-            background-color: rgb(165, 158, 166);
-            color: white;
-        }
-
-    </style>
+    <link rel="stylesheet" href="/css/product.css">
 </head>
 <body>
     <header class="main-header">
