--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -4,16 +4,17 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
+        title #{pageTitle}
         ink(rel="stylesheet", href="/css/main.css")
-        block
+        link(rel="stylesheet", href="/css/product.css")
+        block styles
     body 
         header.main-header  
             nav.main-header__nav
                 ul.main-header__item-list
                     li.main-header__item
-                        a(href="/")  Shop 
+                        a(href="/",  class=(path === "/" ? 'active' : ''))  Shop 
                     li.main-header__item 
-                        a(href="/admin/add-product") Add Product
+                        a(href="/admin/add-product", class=(path === "/admin/add-product" ? 'active' : '')) Add Product
 
         block content
