--- a/views/shop.pug
+++ b/views/shop.pug
@@ -1,38 +1,23 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title #{docTitle}
-        link(rel="stylesheet", href="/css/main.css")
-        link(rel="stylesheet", href="/css/product.css")
-    body 
-        header.main-header  
-            nav.main-header__nav
-                ul.main-header__item-list
-                    li.main-header__item
-                        a.active(href="/")  Shop 
-                    li.main-header__item 
-                        a(href="/admin/add-product") Add Product
+extends layouts/main-layout.pug
 
+block styles 
+    link(rel="stylesheet", href="/css/forms.css")
 
-        main
-            h1 My Products
-            p List of all products...  
+block content
+    main
+        h1 My Products
+        p List of all products...  
 
-            
-
-
-            if prods.length > 0
-                h3 Greate books
-                ul
-                    each product in prods
-                        div
-                            li.h1 #{product.title}
-                            img(src="https://www.shutterstock.com/image-photo/id-like-image-that-represents-260nw-2546167707.jpg", alt="A book")   
-                            h3 Price: €19.99
-                            p Description: It is a very interesting book!!!
-                    button Add to Cart
-            else 
-                h1 No products
+        
+        if prods.length > 0
+            h3 Greate books
+            ul
+                each product in prods
+                    div
+                        li.h1 #{product.title}
+                        img(src="https://www.shutterstock.com/image-photo/id-like-image-that-represents-260nw-2546167707.jpg", alt="A book")   
+                        h3 Price: €19.99
+                        p Description: It is a very interesting book!!!
+                button Add to Cart
+        else 
+            h1 No products
