--- a/views/shop.hbs
+++ b/views/shop.hbs
@@ -1,6 +1,6 @@
 
 
-    <main>
+    <!--<main>
        <h1>My Products</h1>
        <p>List of all products...</p>
             {{#if hasProducts}}
@@ -21,4 +21,4 @@
                 {{else}}
                 <h1>No products found!</h1>
             {{/if}}
-    </main>
+    </main> -->
