--- a/views/shop.html
+++ b/views/shop.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,4 +23,4 @@
        <p>List of all products...</p>
     </main>
 </body>
-</html>
+</html>-->
