--- a/public/css/product.css
+++ b/public/css/product.css
@@ -47,12 +47,14 @@ body {
 }
 
 .form-control label,
-.form-control input {
+.form-control input, 
+.form-control textarea {
     display: block;
     width: 100%;
 }
 
-.form-control input {
+.form-control input, 
+.form-control textarea {
     border: 1px solid gray;
     font: inherit;
     border-radius: 2px;
