Add orders section

--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -21,8 +21,10 @@
                             <p> Description:  <%= product.description %> </p>
                         </li>
             
-                        <button> Edit </button>
-                        <button> Delete </button>
+                        <button> <a href="/admin/edit-product"> Edit</a> </button>
+                        <form action="/admin/delete-product" method="POST">
+                            <button> Delete </button>
+                        </form>
                     </div>
                     
             <% } %>  
