--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -21,7 +21,8 @@
                             <p> Description:  <%= product.description %> </p>
                         </li>
             
-                        <button> Add to Cart </button>
+                       <!--- <button> Add to Cart </button> -->
+                        <%- include('../includes/add-to-cart.ejs', {product: product}) %>
                     </div>
                     
             <% } %>  
