--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -22,9 +22,11 @@
                         </li>
 
                         <button> <a href="/products/<%= product.id %>" class="btn">Details</a> </button>
-                        <form action="/add-to-cart" method="POST">
+                        <!--<form action="/add-to-cart" method="POST">
                             <button> Add to Cart </button>
-                        </form>
+                        </form>-->
+
+                        <%- include('../includes/add-to-cart.ejs', {product: product}) %>
                         
                     </div>
                     
