--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -21,7 +21,7 @@
                             <p> Description:  <%= product.description %> </p>
                         </li>
             
-                        <button> <a href="/admin/edit-product"> Edit</a> </button>
+                        <button> <a href="/admin/edit-product/<%= product.id %>?edit=true"> Edit</a> </button>
                         <form action="/admin/delete-product" method="POST">
                             <button> Delete </button>
                         </form>
