--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -24,6 +24,11 @@
                     <% if (editing) { %><%= product.description %><% } %>
                 </textarea>
             </div>
+
+            <% if (editing) { %> 
+                <input  type="hidden" value="<% product.id %>" name="productId">
+            <% } %>
+
             <button type="submit">
                 <% if (editing) { %> Update Product <% } else { %> Add Product <% } %>
             </button>
